[package]
name = "gotham-cors-middleware"
version = "0.2.1"
authors = ["Andy Bell <andy.bell.github@gmail.com>"]
description = "A small crate to add basic CORS functionality to Gotham apps"
repository = "https://github.com/simpleweb/gotham-cors-middleware"
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
futures = "0.3"
gotham = { git = "https://github.com/gotham-rs/gotham.git", rev = "9f10935" }
gotham_derive = { git = "https://github.com/gotham-rs/gotham.git", rev = "9f10935" }
hyper = "0.14"

[dev-dependencies]
mime = "0.3"
